Add Apache 2.0 license with NOTICE file
- Add LICENSE file with Apache License 2.0 (downloaded from apache.org)
- Add NOTICE file with copyright attribution and Morgen API acknowledgment
- Update README.md license section to reference LICENSE and NOTICE files
- Add license metadata to pyproject.toml

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -2,6 +2,7 @@
 name = "morgenmcp"
 version = "0.1.0"
 description = "MCP server for Morgen calendar API"
+license = { text = "Apache-2.0" }
 requires-python = ">=3.14"
 dependencies = [
     "fastmcp>=0.4.1",
