refactor: replace bash setup script with Python
- Move setup script from scripts/setup-dev.sh to morgenmcp/setup_dev.py
- Add setup-dev entry point in pyproject.toml
- Enable uv package mode for entry point installation
- Run with: uv run setup-dev

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -20,6 +20,10 @@ dev = [
 
 [project.scripts]
 morgenmcp = "morgenmcp.server:main"
+setup-dev = "morgenmcp.setup_dev:main"
+
+[tool.uv]
+package = true
 
 [tool.pytest.ini_options]
 asyncio_mode = "auto"
