--- a/pyproject.toml
+++ b/pyproject.toml
@@ -9,6 +9,7 @@ dependencies = [
     "httpx>=0.27",
     "pydantic>=2.0",
     "pydantic-core>=2.41.5",
+    "python-dotenv>=1.0",
 ]
 
 [project.optional-dependencies]
@@ -20,7 +21,6 @@ dev = [
 
 [project.scripts]
 morgenmcp = "morgenmcp.server:main"
-setup-dev = "morgenmcp.setup_dev:main"
 
 [tool.uv]
 package = true
