chore: upgrade dependencies and tooling
- Pin fastmcp to 3.0.0b2, bump httpx/pydantic
- Add pyright for type checking, bump ruff to >= 0.15
- Add pyright pre-commit hook, bump ruff hook to v0.15.0
- Track .claude/settings.json and hooks in .gitignore
- Add fastmcp docs submodule with shallow clone
- Regenerate lockfile

--- a/.gitignore
+++ b/.gitignore
@@ -46,8 +46,10 @@ htmlcov/
 .tox/
 .nox/
 
-# Local settings and secrets
-.claude/
+# Local settings and secrets — track shared config, ignore the rest
+.claude/*
+!.claude/settings.json
+!.claude/hooks
 .env
 .env.local
 *.env
