--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,8 @@
 [submodule "docs/morgen-dev-docs"]
 	path = docs/morgen-dev-docs
 	url = https://github.com/morgen-so/morgen-dev-docs.git
+
+[submodule "docs/fastmcp"]
+	path = docs/fastmcp
+	url = https://github.com/jlowin/fastmcp.git
+	shallow = true
