--- a/pyproject.toml
+++ b/pyproject.toml
@@ -5,10 +5,9 @@ description = "MCP server for Morgen calendar API"
 license = { text = "Apache-2.0" }
 requires-python = ">=3.14"
 dependencies = [
-    "fastmcp==3.0.0b2",
+    "fastmcp==3.0.0",
     "httpx>=0.28",
     "pydantic>=2.12",
-    "python-dotenv>=1.0",
 ]
 
 [project.optional-dependencies]
@@ -52,9 +51,6 @@ select = [
 ignore = [
     "E501",  # line too long (handled by formatter, docstrings exempt)
 ]
-
-[tool.ruff.lint.per-file-ignores]
-"morgenmcp/server.py" = ["E402"]  # load_dotenv() must run before imports
 
 [tool.ruff.lint.isort]
 known-first-party = ["morgenmcp"]
